--- a/conclock-clock.html
+++ b/conclock-clock.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Convention Clock</title>
-	<link rel="stylesheet" href="timer.css">	
+	<link rel="stylesheet" href="css/timer.css">	
 	<script type="module" src="js/conclock-clock.js"></script>
 </head>
 
