--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 
 <head>
 	<title>Convention Clock</title>
-	<link rel="stylesheet" href="page.css">	
+	<link rel="stylesheet" href="css/timer.css">	
 </head>
 
 <body>
- 	<div id="header">ConClock Clients</div>
+ 	<div id="message" class="blue">ConClock</div>
  	
-    <ul class="menu">
-        <li><a href="conclock-clock.html">Clock</a></li>
-    </ul>
+    <div id="clock">
+        <a href="conclock-clock.html" title="Clock">&#x1F550;<!--clock face--></a>
+        <a style="opacity: 25%;" title="Timer">&#x23F3;<!--hourglass--></a>
+        <a style="opacity: 25%;" title="Monitor">&#x1F5A5;<!--desktop computer--></a>
+        <a style="opacity: 25%;" title="Settings">&#x1F6E0;<!--hammer and wrench--></a>
+    </div>
 </body>
 
 </html>
